added bookmark and planned modules
